# example-haskell-wheel

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  Fib.hs  Fib_stub.h  HSfib-wheel.cabal  LICENSE  MANIFEST.in  Makefile  MyFib.hs  README.md  Setup.hs  example-haskell-wheel.cabal  fib.cabal  haskell-wheel.cabal  main.c  pyproject.toml  requirements-ci.txt  setup.py
.github/: dependabot.yml
.github/actions/setup-haskell/: action.yml
.github/workflows/: ci.yml  cibuildwheel-windows.yml  cibuildwheel.yml  linux.yml
cbits/: HSfib.c  HSfib.def  binding.i  binding.py
cbits/__pycache__/: fib.c
dockerfiles/: Dockerfile.manylinux2014_ghc945_x86_64  Dockerfile.manylinux_2_28_ghc945_aarch64  Dockerfile.musllinux_1_1_ghc945_x86_64
fib/: __init__.py  __main__.py  binding.c  binding.i  binding_wrap.c  example.py
scripts/: before-all-almalinux-8.8.sh  before-all-alpine-3.12.12.sh  before-all-alpine.sh  before-all-centos.sh  before-all-linux.sh  before-all-macos.sh  build-wheel.sh  build_macosx_wheels.sh  docker-build-wheel.sh
src/: ExampleHaskellWheelBinding.hs  Fib.hs  Fib_stub.h
src/ExampleHaskellWheel/: Binding.hs
src/example-haskell-wheel/: __init__.py  __main__.py  binding.i
src/example_haskell_wheel/: __init__.py  __main__.py  binding.i  binding.pyi  typing.py
src/fib.egg-info/: PKG-INFO  SOURCES.txt
src/py/fib/: __init__.py  binding.py
src/py/fib.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_example_haskell_wheel.py  test_fib.py
