cabal-version:   3.0
name:            example-haskell-wheel
version:         1.2.0
description:
  An experiment in publishing a Haskell library as a Python Wheel.

license:         MIT
license-file:    LICENSE
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com
copyright:       (c) 2023 Wen Kokke
build-type:      Custom
extra-doc-files: CHANGELOG.md

custom-setup
  setup-depends:
    , base       >=4
    , Cabal      >=2.0.0.2
    , directory  >=1
    , filepath   >=1

common warnings
  ghc-options: -Wall

foreign-library _binding
  import:           warnings
  type:             native-shared

  -- 01-04-2023:
  -- Standalone builds appear to work with macOS builds of GHC
  if os(osx)
    options: standalone

  if os(windows)
    options:      standalone
    mod-def-file: src/example_haskell_wheel/binding.def

  c-sources:        src/example_haskell_wheel/binding_wrap.c
  hs-source-dirs:   src
  other-modules:
    ExampleHaskellWheel.Binding
    Paths_example_haskell_wheel

  build-depends:    base >=4.7 && <5
  default-language: Haskell2010
