cabal-version:   3.0
name:            example-haskell-wheel
version:         1.3.0
description:
  An experiment in publishing a Haskell library as a Python Wheel.

license:         MIT
license-file:    LICENSE
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com
copyright:       (c) 2023 Wen Kokke
build-type:      Custom
extra-doc-files: CHANGELOG.md

flag force-standalone
  description: Force standalone
  default:     False
  manual:      True

custom-setup
  setup-depends:
    , base       >=4
    , Cabal      >=2.0.0.2
    , directory  >=1
    , filepath   >=1

common warnings
  ghc-options: -Wall

foreign-library _binding
  import:           warnings
  type:             native-shared

  -- 01-04-2023:
  -- Standalone builds appear to work with macOS builds of GHC
  if os(osx)
    options: standalone

  if os(windows)
    options:      standalone
    mod-def-file: src/example_haskell_wheel/binding.def

  -- 14-10-2024:
  -- Standalone builds for other operating systems
  if flag(force-standalone)
    options: standalone

  c-sources:        src/example_haskell_wheel/binding_wrap.c
  hs-source-dirs:   src
  other-modules:
    ExampleHaskellWheelBinding
    Paths_example_haskell_wheel

  build-depends:
    , base        >=4.7 && <5
    , bytestring  >=0.9 && <0.13

  default-language: Haskell2010
