cabal-version:   3.0
name:            fib
version:         0.1.0
description:
  An experiment in publishing a Haskell library as a Python Wheel.

license:         MIT
license-file:    LICENSE
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com
copyright:       (c) 2023 Wen Kokke
build-type:      Custom
extra-doc-files: CHANGELOG.md

custom-setup
  setup-depends: Cabal

common warnings
  ghc-options: -Wall

foreign-library _binding
  import:            warnings
  type:              native-shared
  options:           standalone
  c-sources:         src/fib/binding_wrap.c
  hs-source-dirs:    src
  other-modules:     Fib
  build-depends:     base >=4.7 && <5
  default-language:  Haskell2010
  
  if os(windows)
    mod-def-file:    Fib.def
    extra-libraries: python311.lib
