[build-system]
requires = [
  "find_libpython >=0.3,<0.4; sys_platform == 'win32'",
  "setuptools >=45",
  "swig >=4,<5"
]
build-backend = "setuptools.build_meta"

[project]
name = "example-haskell-wheel"
version = "1.3.0"
authors = [{ name = "Wen Kokke", email = "wenkokke@users.noreply.github.com" }]
description = "An experiment in publishing a Haskell library as a Python Wheel."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7.1,<3.13"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
mypy = ["types_setuptools >=45"]
test = ["pytest >=7.1,<9"]

[project.scripts]
"example-haskell-wheel" = "example_haskell_wheel.__main__:main"

[tool.bumpver]
current_version = "v1.3.0"
version_pattern = "vMAJOR.MINOR.PATCH[-TAG]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  '^version = "{pep440_version}"$',
  '^current_version = "{version}"$',
]
"src/example_haskell_wheel/__init__.py" = [
  '^VERSION: str = "{pep440_version}"$',
]
"example-haskell-wheel.cabal" = ['^version:         {pep440_version}$']

[tool.cibuildwheel]
# 18-04-2023:
# Cross-compilation does not work with GHC and Cabal.
archs = ["native"]
build-frontend = "build"
build = [
  # GHC provides x86_64 and arm64 builds for macOS.
  "*-macosx_x86_64",
  "*-macosx_arm64",
  # GHC provides an AMD64 build for Windows.
  "*-win_amd64",
  # GHC provides an x86_64 build for CentOS 7 (manylinux2014).
  "*-manylinux_x86_64",
  # GHC provides an i686 build for Debian 9 (manylinux_2014 compatible).
  "*-manylinux_i686",
  # GHC provides an aarch64 build for Debian 10 (manylinux_2_28 compatible).
  "*-manylinux_aarch64",
  # GHC provides an x86_64 build for Alpine 3.12 (manylinux_2_28 compatible).
  "*-musllinux_x86_64",
]
skip = [
  # 18-04-2023:
  # PyPy builds do not work.
  "pp*",
]
test-command = "pytest {package}/tests"
test-extras = "test"
# 19-06-2023:
# Use custom manylinux and musllinux images with GHC 9.4.8 preinstalled.
manylinux-aarch64-image = "wenkokke/manylinux_2_28_ghc948_aarch64"
manylinux-i686-image = "wenkokke/manylinux2014_ghc948_i686"
manylinux-x86_64-image = "wenkokke/manylinux2014_ghc948_x86_64"
musllinux-x86_64-image = "wenkokke/musllinux_1_1_ghc948_x86_64"

[tool.mypy]
mypy_path = "src"
python_version = 3.7
strict = true
implicit_reexport = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4
env_list = py{37,38,39,310,311,312}-{lin,mac,win}

[testenv:py{37,38,39,310,311,312}-{lin,mac,win}]
package = external
package_env = build-{env_name}
platform =
  lin: linux
  mac: darwin
  win: win32
allowlist_externals =
  sh
extras =
  test
commands =
  {env_python} -m pytest {posargs}

[testenv:build-py{37,38,39,310,311,312}-{lin,mac,win}]
deps =
  build
  auditwheel; sys_platform == 'linux'
  delocate; sys_platform == 'darwin'
package_glob =
  py37-lin: {package_root}{/}dist{/}*cp37*manylinux*.whl
  py38-lin: {package_root}{/}dist{/}*cp38*manylinux*.whl
  py39-lin: {package_root}{/}dist{/}*cp39*manylinux*.whl
  py310-lin: {package_root}{/}dist{/}*cp310*manylinux*.whl
  py311-lin: {package_root}{/}dist{/}*cp311*manylinux*.whl
  py312-lin: {package_root}{/}dist{/}*cp312*manylinux*.whl
  py37-mac: {package_root}{/}dist{/}*cp37*macosx*.whl
  py38-mac: {package_root}{/}dist{/}*cp38*macosx*.whl
  py39-mac: {package_root}{/}dist{/}*cp39*macosx*.whl
  py310-mac: {package_root}{/}dist{/}*cp310*macosx*.whl
  py311-mac: {package_root}{/}dist{/}*cp311*macosx*.whl
  py312-mac: {package_root}{/}dist{/}*cp312*macosx*.whl
  py37-win: {package_root}{/}dist{/}*cp37*win*.whl
  py38-win: {package_root}{/}dist{/}*cp38*win*.whl
  py39-win: {package_root}{/}dist{/}*cp39*win*.whl
  py310-win: {package_root}{/}dist{/}*cp310*win*.whl
  py311-win: {package_root}{/}dist{/}*cp311*win*.whl
  py312-win: {package_root}{/}dist{/}*cp312*win*.whl
allowlist_externals =
  sh
commands =
  sh {package_root}/scripts/build-wheel.sh
"""
